Add python venv

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,17 @@ jobs:
                 repository-cache: true
           - run: bazelisk build --config=default_cpp20 //...
           - run: bazelisk test --config=default_cpp20 //...
+
+    format-check:
+        runs-on: ubuntu-22.04
+        steps:
+            - uses: actions/checkout@v2
+            - uses: bazel-contrib/setup-bazel@0.8.1
+              with:
+                  # Avoid downloading Bazel every time.
+                  bazelisk-cache: true
+                  # Store build cache per workflow.
+                  disk-cache: ${{ github.workflow }}
+                  # Share repository cache between workflows.
+                  repository-cache: true
+            - run: bash toolchains/format/format_all.sh
