--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
                 disk-cache: ${{ github.workflow }}
                 # Share repository cache between workflows.
                 repository-cache: true
-          - run: bazelisk build --config=default_cpp20 //...
-          - run: bazelisk test --config=default_cpp20 //...
+          - run: bazelisk build --config=cpp20 //...
+          - run: bazelisk test --config=cpp20 //...
 
     build-and-test-ubuntu-gcc-x86_64:
         runs-on: ubuntu-22.04
@@ -36,8 +36,8 @@ jobs:
                 disk-cache: ${{ github.workflow }}
                 # Share repository cache between workflows.
                 repository-cache: true
-          - run: bazelisk build --config=default_cpp20 //...
-          - run: bazelisk test --config=default_cpp20 //...
+          - run: bazelisk build --config=cpp20 //...
+          - run: bazelisk test --config=cpp20 //...
 
     format-check:
         runs-on: ubuntu-22.04
