--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -16,6 +16,14 @@ module(
 bazel_dep(name = "protobuf", version = "23.1")
 bazel_dep(name = "rules_rust", version = "0.38.0")
 
+##### My own Bazel infrastructure #####
+bazel_dep(name = "devops.bazel_infrastructure", version = "0.0.0")
+git_override(
+    module_name = "devops.bazel_infrastructure",
+    commit = "4f1242e0a9398b865dbfd34a051421b915d17335",
+    remote = "https://github.com/realypz/devops.bazel_infrastructure.git",
+)
+
 ##### Rust #####
 rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
 rust.toolchain(
