Maintenance * Rearrange namespace * Add doxygen config file

--- a/src/helpers/BUILD.bazel
+++ b/src/helpers/BUILD.bazel
@@ -1,17 +1,16 @@
 cc_library(
-    name = "typelist",
+    name = "type",
     srcs = [],
     hdrs = [
         "type.h",
-        "typelist.h",
         "typelist_impl.h",
     ],
     visibility = ["//visibility:public"],
 )
 
 cc_library(
-    name = "number_helper",
+    name = "number",
     srcs = [],
-    hdrs = ["number_helper.h"],
+    hdrs = ["number.h"],
     visibility = ["//visibility:public"],
 )
